[project]
name = "sourav"
version = "0.1.0"
description = "Interview question prep: web research, dedup, vector cache, PDF output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-core>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "chromadb>=1.5.0",
    "ddgs>=9.0.0",
    "beautifulsoup4>=4.14.0",
    "requests>=2.32.0",
    "pypdf>=6.0.0",
    "reportlab>=4.4.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "markdown>=3.10.0",
    "playwright>=1.57.0",
]

[dependency-groups]
dev = [
    "black>=26.5.0",
    "isort>=8.0.0",
]

[project.scripts]
interview-prep = "main:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["interview_prep"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

[tool.uv]
package = true
